# Hyper-V_ParallelTask

./: .gitignore  README.md
Task_1/: CMakeLists.txt  exec_programm  functions.cpp  functions.h  hosts.txt  main.cpp
Task_2/: cpu_shared.c  cpu_shared.h  gpu_shared.cu  gpu_shared.h  header.h  hosts.txt  launch.sh  main_work  main_work.cpp
